@@ -92,7 +92,14 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
             test.jvmArgs(
                 "-Xmx" + System.getProperty("tests.heap.size", "512m"),
                 "-Xms" + System.getProperty("tests.heap.size", "512m"),
-                "--illegal-access=warn",
+                "--illegal-access=deny",
+                // TODO: only open these for mockito when it is modularized
+                "--add-opens=java.base/java.security.cert=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio.channels=ALL-UNNAMED",
+                "--add-opens=java.base/java.net=ALL-UNNAMED",
+                "--add-opens=java.base/javax.net.ssl=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
+                "--add-opens=java.base/java.time=ALL-UNNAMED",
                 "-XX:+HeapDumpOnOutOfMemoryError"
             );
 
